<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vibernate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section0">Calendar View</string>
    <string name="title_section1">List View</string>
    <string name="title_section2">Section 3</string>
    <string name="action_settings">Settings</string>

    <!-- Calendar Fragment strings -->
    <string name="day_sun">Sun</string>
    <string name="day_mon">Mon</string>
    <string name="day_tues">Tues</string>
    <string name="day_wed">Wed</string>
    <string name="day_thurs">Thurs</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>

    <string name="timer_hint_1">Click on a block</string>
    <string name="timer_hint_2">to view details</string>


</resources>
