<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white" android:nestedScrollingEnabled="true">

    <!-- Weekdays -->

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="5dp"
                  android:background="@color/white">

        <TextView android:text="@string/day_sun" style="@style/WeekText"/>
        <TextView android:text="@string/day_mon" style="@style/WeekText"/>
        <TextView android:text="@string/day_tues" style="@style/WeekText"/>
        <TextView android:text="@string/day_wed" style="@style/WeekText"/>
        <TextView android:text="@string/day_thurs" style="@style/WeekText"/>
        <TextView android:text="@string/day_fri" style="@style/WeekText"/>
        <TextView android:text="@string/day_sat" style="@style/WeekText"/>

    </LinearLayout>

    <View style="@style/HorizontalDivider"/>

    <!-- Timers -->
    <LinearLayout  android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="5"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"
                   android:background="@color/background">

        <View style="@style/TimerContainer"/>
        <View style="@style/VerticalDivider"/>

        <View style="@style/TimerContainer"/>
        <View style="@style/VerticalDivider"/>

        <View style="@style/TimerContainer"/>
        <View style="@style/VerticalDivider"/>

        <View style="@style/TimerContainer"/>
        <View style="@style/VerticalDivider"/>

        <View style="@style/TimerContainer"/>
        <View style="@style/VerticalDivider"/>

        <View style="@style/TimerContainer"/>
        <View style="@style/VerticalDivider"/>

        <View style="@style/TimerContainer"/>

    </LinearLayout>

    <View style="@style/HorizontalDivider"/>

    <!-- Individual timer info -->
    <android.support.v7.widget.CardView android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="3"
                                        android:background="@color/white">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:visibility="gone">
            <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="83px">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="MACM 101"
                          style="@style/TimerTitleText"
                          android:id="@+id/TimerName"/>
                <ImageView android:layout_height="wrap_content"
                           android:layout_width="wrap_content"
                           android:layout_toRightOf="@+id/TimerName"/>
                <Switch android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">
                <ImageView android:layout_height="83px"
                           android:layout_width="wrap_content"
                           android:layout_alignParentLeft="true"/>
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="0dp"
                              android:layout_weight="1"
                              android:text="12.45 - 05:00"
                              style="@style/TimerTimeText"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="0dp"
                              android:layout_weight="1"
                              android:text="MON, TUES"
                              style="@style/TimerDaysText"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:text="Click on a block"
                      style="@style/TimerTimeText"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:text="to view details"
                      style="@style/TimerDaysText"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>